infra/k8s/postgresql-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgresql-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgresql
  template:
    metadata:
      labels:
        app: postgresql
    spec:
      containers:
      - name: postgresql
        image: postgres:12.16
---
apiVersion: v1
kind: Service
metadata:
  name: postgresql-srv
spec:
  selector:
    app: postgresql
  ports:
    - name: db
      protocol: TCP
      port: 8080
      targetPort: 8080
